doc: update api doc.
