# fancyapi/src/main/java/com/cmoney/fanciapi/fanci/model/BulletingBoardMessageParam.kt
@@ -43,7 +43,7 @@ data class BulletingBoardMessageParam (
 
     /* 投票活動 */
     @Json(name = "votingIds")
-    val votingIds: kotlin.collections.List<kotlin.Long>? = null
+    val votingIds: kotlin.collections.List<kotlin.String>? = null
 
 ) : Parcelable
 
